# molmobot-code

./: .gitignore  README.md
browser-use-intro/: README.md  automate_youtube_upload.py  product_search.py  pyproject.toml
tello-person-following/: README.md  main.py  pyproject.toml
tello-person-following/scripts/: keyboard_control_with_image_capture.py
tello-person-following/scripts/misc/: basic_movements.py  image_capture.py  keyboard_control.py
tello-person-following/utils/: keypress.py
vqa-late-fusion/: README.md  main.py  notebook.ipynb  pyproject.toml
